# Color_Blind_Accessibility

./: .gitignore  Dockerfile  README.md  client.py  environment.yml  inference.py  openenv.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy_hf_env.yml
OpenEnv/.github/workflows/: deploy-hf-env.yml
OpenEnv/envs/colorblind_env/: README.md  __init__.py  app.py  app_old.py  appv1.py  callbacks.py  client.py  dataset.py  environment.yml  feedback_dataset.json  gym_wrapper.py  inference.py  models.py  ppo_train.py  retrain.py  verify_regeneration.py  visualize.py
OpenEnv/envs/colorblind_env/logs/PPO_1/: events.out.tfevents.1775222703.Moods-MacBook-Air.local.10406.0
OpenEnv/envs/colorblind_env/logs/PPO_10/: events.out.tfevents.1775235968.Moods-MacBook-Air.local.13810.0
OpenEnv/envs/colorblind_env/logs/PPO_11/: events.out.tfevents.1775236421.Moods-MacBook-Air.local.14035.0
OpenEnv/envs/colorblind_env/logs/PPO_12/: events.out.tfevents.1775237031.Moods-MacBook-Air.local.14313.0
OpenEnv/envs/colorblind_env/logs/PPO_16/: events.out.tfevents.1775301128.Mac.38434.0
OpenEnv/envs/colorblind_env/server/: Dockerfile  __init__.py  app.py  config.py  environment.py  utils.py
OpenEnv/envs/colorblind_env/tests/: test_client.py  test_environment.py  test_models.py  test_utils.py
OpenEnv/scripts/: prepare_hf_deployment.sh
graders/: easy.py  hard.py  medium.py
scripts/: prepare_hf_deployment.sh
server/: __init__.py  app.py  config.py  environment.py  utils.py
src/openenv/core/env_server/: web_interface.py
tests/: test_client.py  test_environment.py
(+12 files in other folders)
